# monorepo

./: .angulardoc.json  .bazelignore  .bazelrc  .eslintrc.js  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  angular.json  package.json  tsconfig.client.json  tsconfig.json  tsconfig.server.json
.devcontainer/: Dockerfile  devcontainer.json  zshrc
.github/workflows/: continuous-deployment-dev.yml  continuous-deployment-prod.yml  continuous-integration.yml
cloud/: README.md  dev.yaml  prod.yaml  project.py
cloud/infra/: BUILD.bazel  bootstrap.sh
patches/: README.md  typescript+3.9.5.patch
src/frontend/: README.md
src/frontend/client/: BUILD.bazel  index.dev.html  index.prod.html  main.dev.ts  main.prod.ts  main.server.ts  ngsw-config.json  prerender.ts  styles.scss
src/frontend/client/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.scss  app.component.theme.scss  app.component.ts  app.dev.module.ts  app.module.ts  app.prod.module.ts  app.server.module.ts
src/frontend/client/app/browse/: BUILD.bazel  browse-routing.module.ts  browse.component.html  browse.component.theme.scss  browse.component.ts  browse.module.ts  index.ts
src/frontend/client/app/core/: BUILD.bazel  core.module.ts  core.theme.scss
src/frontend/client/app/core/containers/: BUILD.bazel  containers.module.ts  containers.theme.scss
src/frontend/client/app/core/containers/header/: BUILD.bazel  header.component.html  header.component.scss  header.component.theme.scss  header.component.ts  header.module.ts
src/frontend/client/app/core/containers/sidenav/: BUILD.bazel  sidenav.animations.ts  sidenav.component.html  sidenav.component.scss  sidenav.component.theme.scss  sidenav.component.ts  sidenav.module.ts
src/frontend/client/app/core/store/: BUILD.bazel  index.ts  store.effects.ts  store.feature.ts  store.module.ts  store.reducers.ts  store.state.ts
src/frontend/client/app/core/store/app/: BUILD.bazel  app.actions.ts  app.effects.ts  app.reducer.ts  app.selectors.ts  app.state.ts  index.ts
src/frontend/client/app/core/store/layout/: BUILD.bazel  index.ts  layout.actions.ts  layout.effects.ts  layout.reducer.ts  layout.selectors.ts  layout.state.ts
src/frontend/client/app/core/store/router/: BUILD.bazel  index.ts  router.module.ts  router.selectors.ts  router.serializer.ts  router.state.ts
src/frontend/client/app/core/store/settings/: BUILD.bazel  index.ts  settings.actions.ts  settings.effects.ts  settings.reducer.ts  settings.selectors.ts  settings.state.ts
src/frontend/client/app/core/store/users/: BUILD.bazel  index.ts  users.actions.ts  users.effects.ts  users.reducer.ts  users.selectors.ts  users.service.ts  users.state.ts
src/frontend/client/app/core/store/worker/: BUILD.bazel  index.ts  worker.actions.ts  worker.effects.ts  worker.reducer.ts  worker.selectors.ts  worker.state.ts
src/frontend/client/app/dashboard/: BUILD.bazel  dashboard-routing.module.ts  dashboard.component.html  dashboard.component.theme.scss  dashboard.component.ts  dashboard.module.ts  index.ts
src/frontend/client/app/home/: BUILD.bazel  home-routing.module.ts  home.component.html  home.component.theme.scss  home.component.ts  home.module.ts
src/frontend/client/app/profile/: BUILD.bazel  index.ts  profile-routing.module.ts  profile.component.html  profile.component.theme.scss  profile.component.ts  profile.module.ts
src/frontend/client/app/settings/: BUILD.bazel  index.ts  settings-routing.module.ts  settings.component.html  settings.component.theme.scss  settings.component.ts  settings.module.ts
src/frontend/client/app/shared/: BUILD.bazel  shared.theme.scss
src/frontend/client/app/shared/components/: BUILD.bazel  components.theme.scss
src/frontend/client/app/shared/components/avatar/: BUILD.bazel  avatar.component.html  avatar.component.scss  avatar.component.theme.scss  avatar.component.ts
src/frontend/client/app/shared/components/page/: BUILD.bazel  index.ts  page.component.scss  page.component.theme.scss  page.component.ts  page.module.ts
src/frontend/client/app/shared/utils/ngrx/: BUILD.bazel  actions.ts  effects.ts  reducer.ts
src/frontend/client/assets/: BUILD.bazel  angular-logo-with-text.svg:Zone.Identifier
src/frontend/server/: BUILD.bazel  app.controller.ts  app.module.ts  main.ts
src/patches/: README.md
src/tools/: README.md  angular_prerender.bzl  angular_ts_library.bzl
tools/: angular_serviceworker.bzl  angular_ts_library.bzl
