load("@npm_bazel_typescript//:index.bzl", "ts_config")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

package(default_visibility = ["//:__subpackages__"])

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES,
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

exports_files([
    "rollup.config.js",
    "tsconfig.json",
    "tsconfig.client.json",
    "tsconfig.server.json",
])

ts_config(
    name = "tsconfig-server",
    src = "tsconfig.server.json",
    deps = [":tsconfig.json"],
)

ts_config(
    name = "tsconfig-client",
    src = "tsconfig.client.json",
    deps = [":tsconfig.json"],
)
