load("//src/tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "app",
    srcs = [
        "app.component.ts",
        "app.dev.module.ts",
        "app.module.ts",
        "app.prod.module.ts",
        "app-routing.module.ts",
    ],
    angular_assets = [
        ":app-styles",
        "app.component.html",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "//src/frontend/client/app/core",
        "//src/frontend/client/app/home",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ngrx/effects",
        "@npm//@ngrx/store",
        "@npm//@ngrx/store-devtools",
        "@npm//@nguniversal/common",
        "@npm//ngrx-store-logger",
    ],
)

sass_library(
    name = "app_theme",
    srcs = ["app.component.theme.scss"],
    deps = [
        "//src/frontend/client/app/core:core_theme",
        "//src/frontend/client/app/home:home_theme",
        "//src/frontend/client/app/shared:shared_theme",
    ],
)

sass_binary(
    name = "app-styles",
    src = "app.component.scss",
)

ng_ts_library(
    name = "app_server",
    srcs = ["app.server.module.ts"],
    tsconfig = "//:tsconfig.server.json",
    deps = [
        ":app",
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
    ],
)
