load("//src/tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "core",
    srcs = [
        "core.module.ts",
        "index.ts",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "//src/frontend/client/app/core/containers",
        "//src/frontend/client/app/core/store",
        "@npm//@angular/core",
    ],
)

sass_library(
    name = "core_theme",
    srcs = [
        "core.theme.scss",
    ],
    deps = [
        "//src/frontend/client/app/core/containers:containers_theme",
    ],
)
