load("//tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "profile",
    srcs = [
        "index.ts",
        "profile.component.ts",
        "profile.module.ts",
        "profile-routing.module.ts",
    ],
    angular_assets = [
        ":profile-styles",
        "profile.component.html",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "//src/frontend/client/app/shared/components/page",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)

sass_binary(
    name = "profile-styles",
    src = "profile.component.scss",
)

sass_library(
    name = "profile_theme",
    srcs = ["profile.component.theme.scss"],
)
