load("//src/tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "settings",
    srcs = [
        "index.ts",
        "settings.component.ts",
        "settings.module.ts",
        "settings-routing.module.ts",
    ],
    angular_assets = [
        ":settings-styles",
        "settings.component.html",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "//src/frontend/client/app/shared/components/page",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)

sass_binary(
    name = "settings-styles",
    src = "settings.component.scss",
)

sass_library(
    name = "settings_theme",
    srcs = ["settings.component.theme.scss"],
)
