load("//src/tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "state",
    srcs = [
        "layout.actions.ts",
        "layout.state.ts",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "//src/frontend/client/app/shared/utils/ngrx:actions",
        "@npm//@ngrx/store",
    ],
)

ng_ts_library(
    name = "selectors",
    srcs = [
        "layout.selectors.ts",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        ":state",
        "//src/frontend/client/app/core/store:feature",
        "//src/frontend/client/app/core/store:state",
        "@npm//@ngrx/store",
    ],
)

ng_ts_library(
    name = "layout",
    srcs = [
        "index.ts",
        "layout.effects.ts",
        "layout.reducer.ts",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        ":state",
        "//src/frontend/client/app/shared/utils/ngrx:effects",
        "//src/frontend/client/app/shared/utils/ngrx:reducer",
        "@npm//@angular/core",
        "@npm//@ngrx/effects",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
