load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "state",
    srcs = [
        "users.actions.ts",
        "users.models.ts",
        "users.state.ts",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "@npm//@ngrx/entity",
        "@npm//@ngrx/store",
    ],
)

ng_ts_library(
    name = "selectors",
    srcs = [
        "users.selectors.ts",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        ":state",
        "//src/frontend/client/app/core/store:feature",
        "//src/frontend/client/app/core/store:state",
        "@npm//@ngrx/store",
    ],
)

ng_ts_library(
    name = "users",
    srcs = [
        "index.ts",
        "users.effects.ts",
        "users.reducer.ts",
        "users.service.ts",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        ":selectors",
        ":state",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@ngrx/effects",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
