load("//tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "page",
    srcs = [
        "index.ts",
        "page.component.ts",
        "page.module.ts",
    ],
    angular_assets = [
        ":page-styles",
        "page.component.html",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
    ],
)

sass_binary(
    name = "page-styles",
    src = "page.component.scss",
)

sass_library(
    name = "page_theme",
    srcs = ["page.component.theme.scss"],
)
