load("//src/tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "actions",
    srcs = [
        "actions.ts",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "@npm//@ngrx/store",
    ],
)

ng_ts_library(
    name = "effects",
    srcs = [
        "effects.ts",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "@npm//@ngrx/effects",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "reducer",
    srcs = [
        "reducer.ts",
    ],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "@npm//@ngrx/store",
    ],
)
